GPC/tests/examples/fail/methodNoObject.gpc


int methodNoObject() {
    
    int x = 5;
    x.m1();
    return 0;

}
